tests/mm0_mmu/fail/bad-sort3421.mm0
-- bad modifier order
provable free strict pure sort s3421;